--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "dunite-desktop-app",
-  "productName": "SU Dunite",
-  "version": "1.2.0",
-  "description": "Dunite Desktop App",
+  "name": "plexaur",
+  "productName": "Plexaur",
+  "version": "1.2.1",
+  "description": "Plexaur Desktop App",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "build": "electron-builder"
   },
-  "author": "Shahabas",
+  "author": "Shahabas Abdul Hameed <support@plexaur.com>",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.7.7",
     "electron-log": "^5.2.0",
-    "electron-updater": "^6.3.9",
-    "resize-img": "^2.0.0",
-    "toastify-js": "^1.12.0"
+    "electron-updater": "^6.3.9"
   },
   "devDependencies": {
-    "electron": "^30.5.1",
-    "electron-builder": "^24.13.3"
+    "electron": "^39.2.7",
+    "electron-builder": "^26.4.0"
   },
   "build": {
-    "appId": "com.dunite.sudunite",
-    "productName": "SU Dunite",
+    "appId": "com.shahabas.plexaur",
+    "productName": "Plexaur",
     "directories": {
       "output": "dist"
     },
     "files": [
       "main.js",
+      "preload.js",
+      "updateDialog.html",
       {
         "from": "assets",
         "to": "assets",
@@ -41,9 +41,11 @@
       "target": [
         "AppImage",
         "deb",
-        "rpm"
+        "pacman"
       ],
-      "icon": "assets/linux/icon_512x512.png"
+      "icon": "assets/linux/icon.png",
+      "category": "Utility",
+      "desktop": {}
     },
     "win": {
       "target": "nsis",
@@ -56,7 +58,7 @@
       "createStartMenuShortcut": true,
       "installerIcon": "assets/win/icon.ico",
       "uninstallerIcon": "assets/win/icon.ico",
-      "uninstallDisplayName": "Uninstall SU Dunite",
+      "uninstallDisplayName": "Uninstall Plexaur",
       "runAfterFinish": true
     },
     "mac": {
